--- a/API_RedMango/API_RedMango.csproj
+++ b/API_RedMango/API_RedMango.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="wwwroot\Images\MenuItem\" />
   </ItemGroup>
 
 </Project>
